@@ -1,14 +1,12 @@
 package com.example.demo.alarm.dto;
 
 
-import com.example.demo.account.entity.Account;
 import com.example.demo.alarm.entity.Alarm;
 import lombok.Builder;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Builder
 @Getter
@@ -21,14 +19,20 @@ public class AlarmDto {
     Integer importance;
     LocalDateTime createdAt;
     String description;
+    boolean isShowAlarm;
 
     public static List<AlarmDto> toDtoList(List<Alarm> alarmList) {
-        return alarmList.stream().map(alarm -> AlarmDto.builder()
+        return alarmList.stream().map(alarm ->
+                AlarmDto.builder()
                 .alarmId(alarm.getAlarmId())
                 .name(alarm.getAccount().getName())
                 .description(alarm.getDescription())
+                .type(alarm.getType())
+                .targetId(alarm.getTargetId())
+                .importance(alarm.getImportance())
                 .createdAt(alarm.getCreatedAt())
+                .isShowAlarm(alarm.isShowAlarm())
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
